@@ -1,6 +1,5 @@
-package com.example.onlinecourses.configs.impls;
+package com.example.onlinecourses.specifications;
 
-import com.example.onlinecourses.models.OauthProvider;
 import com.example.onlinecourses.models.Role;
 import lombok.Data;
 import org.springframework.security.core.GrantedAuthority;
@@ -9,6 +8,7 @@ import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 @Data
 public class UserDetailsImpl implements UserDetails {
@@ -18,14 +18,13 @@ public class UserDetailsImpl implements UserDetails {
     private final String username;
     private final String password;
     private final boolean isActive;
-    private final Set<OauthProvider> oauthProviders;
     private final Set<Role> roles;
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
         return roles.stream()
             .map(role -> new SimpleGrantedAuthority(role.getName()))
-            .toList();
+            .collect(Collectors.toList());
     }
     @Override
     public String getPassword() {
